welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: Missing closing brace `}' assumed here
def faireFleur(c:Color) {
^FlowerPot:8: error: expected class or object definition
def faireP() {
^